[gd_scene load_steps=11 format=3 uid="uid://bjpf8e1m2qix0"]

[ext_resource type="Texture2D" uid="uid://d3r0ervf32xu2" path="res://assets/my_assets/Car.png" id="1_4flbx"]
[ext_resource type="Script" uid="uid://bbsjyuv6h54fo" path="res://scripts/player.gd" id="1_i3pqv"]
[ext_resource type="Texture2D" uid="uid://cduiog8bqpujq" path="res://assets/my_assets/LightFading.png" id="2_i3pqv"]
[ext_resource type="Texture2D" uid="uid://grkc6gm74pk0" path="res://assets/my_assets/light_circle.webp" id="3_dqkch"]
[ext_resource type="AudioStream" uid="uid://o6rsslkeaw5e" path="res://assets/my_assets/drift.mp3" id="5_qlg0r"]
[ext_resource type="PackedScene" uid="uid://neomp181hre3" path="res://scenes/pause_menu.tscn" id="5_ur7pv"]
[ext_resource type="AudioStream" uid="uid://btebpgyhwuk53" path="res://assets/my_assets/motor.mp3" id="6_smehm"]
[ext_resource type="AudioStream" uid="uid://c2lngvxdan5a8" path="res://assets/my_assets/acceleration.mp3" id="6_tuyoq"]
[ext_resource type="AudioStream" uid="uid://bc5otxntx452l" path="res://assets/my_assets/reverse.mp3" id="7_fjrip"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_onrkg"]
radius = 12.0
height = 32.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 131
script = ExtResource("1_i3pqv")

[node name="DebugBackground" type="ColorRect" parent="."]
visible = false
offset_left = -1135.0
offset_top = -884.0
offset_right = 1092.0
offset_bottom = 900.0
color = Color(0.356863, 0.356863, 0.356863, 1)

[node name="Headlight1" type="PointLight2D" parent="."]
position = Vector2(259, -15)
scale = Vector2(0.711685, 0.794114)
texture = ExtResource("2_i3pqv")

[node name="Headlight2" type="PointLight2D" parent="."]
position = Vector2(259, 15)
scale = Vector2(0.711685, 0.794114)
energy = 0.7
texture = ExtResource("2_i3pqv")

[node name="CarCircle" type="PointLight2D" parent="."]
scale = Vector2(2, 2)
energy = 0.6
texture = ExtResource("3_dqkch")

[node name="Graphic" type="Sprite2D" parent="."]
texture_filter = 1
rotation = 1.5708
texture = ExtResource("1_4flbx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_onrkg")

[node name="Grass" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grass"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_onrkg")

[node name="Water" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Water"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_onrkg")

[node name="Boost" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boost"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_onrkg")

[node name="Camera2D" type="Camera2D" parent="."]
rotation = 1.5708
ignore_rotation = false
position_smoothing_enabled = true
position_smoothing_speed = 15.0
rotation_smoothing_enabled = true
rotation_smoothing_speed = 2.5

[node name="PauseMenu" parent="." instance=ExtResource("5_ur7pv")]
visible = false

[node name="Sounds" type="Node" parent="."]

[node name="Drift" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("5_qlg0r")

[node name="Motor" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("6_smehm")
volume_db = -5.0

[node name="Acceleration" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("6_tuyoq")
volume_db = -5.0

[node name="Reverse" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("7_fjrip")
volume_db = -2.5

[connection signal="body_entered" from="Grass" to="." method="_on_grass_body_entered"]
[connection signal="body_exited" from="Grass" to="." method="_on_grass_body_exited"]
[connection signal="body_entered" from="Water" to="." method="_on_water_body_entered"]
[connection signal="body_exited" from="Water" to="." method="_on_water_body_exited"]
[connection signal="area_entered" from="Boost" to="." method="_on_boost_area_entered"]
[connection signal="body_entered" from="Boost" to="." method="_on_boost_body_entered"]
